Revise efficiency statement in index.html
Updated the efficiency statement to emphasize the impact of sponsorship.

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             </li>
             <li>
               <span class="impact-bullet"></span>
-              <span><strong>High efficiency:</strong> 98% of Giving Tuesday campaign dollars go directly to families.</span>
+              <span><strong>High efficiency:</strong> Your sponsorship goes directly to our mission of helping individuals and families in crisis, especially during critical seasons like now.</span>
             </li>
             <li>
               <span class="impact-bullet"></span>
