Update FAQ content and contact information

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
             <article class="faq-item">
               <h3>ESG & CSR Reporting</h3>
               <p>
-                We provide annual and campaign-specific summaries that quantify families supported,
+                We provide annual campaign-specific summaries that quantify families supported,
                 funds deployed, and focus areas (housing, food, transportation, veterans). These can
                 be integrated into ESG/CSR reports and board materials.
               </p>
@@ -595,7 +595,7 @@
             <article class="faq-item">
               <h3>Brand & Reputation</h3>
               <p>
-                Public alignment with liveLIVE shows that your organization is serious about
+                Public alignment with liveLIVE demonstrates that your organization is serious about
                 stabilizing families and honoring veterans. It’s not performative—it’s practical,
                 fast, and grounded in real community needs.
               </p>
@@ -716,7 +716,7 @@
               <li>• Emergency rent and utility assistance</li>
               <li>• Groceries, diapers, and essentials for children</li>
               <li>• Transportation support for work, school, and medical care</li>
-              <li>• Targeted support for veterans reintegrating into civilian life</li>
+              <li>• Targeted support for single-parent households and veterans</li>
             </ul>
             <p style="font-size: 0.9rem; color: #444; margin-top: 0.7rem;">
               liveLIVE Foundation is a <strong>501(c)(3)</strong> organization. Sponsorships are
@@ -731,8 +731,8 @@
               impact areas, and the right fit for your organization.
             </p>
             <p style="font-size: 0.9rem; color: #444; margin-top: 0.35rem;">
-              📧 <strong>partnerships@livelivefoundation.org</strong><br />
-              📧 Corporate Sponsorship: <strong>jeff@livelive.today</strong>
+              📧 <strong>sponsorships@livelivefoundation.org</strong><br />
+              📧 Corporate Sponsorship: <strong>sponsorships@liveLIVEFoundation.org</strong>
             </p>
           </div>
         </div>
@@ -755,8 +755,8 @@
 
       <p style="margin-top: 1rem; font-size: 0.85rem; color: rgba(255,255,255,0.85);">
         <strong>For Corporate Sponsorship opportunities, contact:
-        <a href="mailto:jeff@livelive.today" style="color:#fff; text-decoration:underline;">
-          jeff@livelive.today
+        <a href="mailto:sponsorships@liveLIVEfoundation.org" style="color:#fff; text-decoration:underline;">
+          sponsorships@liveLIVEfoundation.org
         </a></strong>
       </p>
 
