--- a/index.html
+++ b/index.html
@@ -483,12 +483,16 @@
             <h3 class="card-title">Platinum Partner</h3>
             <div class="tier-amount">$25,000+ annual commitment</div>
             <ul>
-              <li>Premier logo placement on liveLIVE website and donor communications</li>
+              <li>Premier logo placement on liveLIVE website, banners and donor communications</li>
               <li>Branding in all major campaigns and email outreach</li>
-              <li>Keynote or featured speaking role at annual events</li>
+              <li>Recognized as a Premier Partner at events</li>
+              <li>VIP passes to our annual recognition event</li>
+              <li>Keynote or featured speaking role at annual event</li>
               <li>VIP volunteer day curated for your employees</li>
-              <li>Full-page corporate spotlight in impact report</li>
+              <li>Corporate spotlight in impact report</li>
               <li>Customized ESG impact summary for your disclosures</li>
+              <li>Social media welcome announcement</li>
+              <li>Platinum badge (icon) to display on your website and at events</li>
             </ul>
           </div>
         </article>
@@ -502,9 +506,11 @@
             <ul>
               <li>Featured logo placement on sponsor page</li>
               <li>Inclusion in newsletters and select campaigns</li>
-              <li>Co-branded social media announcements</li>
+              <li>Recognized as a Leadership Partner at event(s)</li>
+              <li>2 VIP event(s) to our annual event</li>
               <li>Invitation to community volunteer events</li>
-              <li>Highlighted as a leadership partner at events</li>
+              <li>Social media welcome announcements</li>
+              <li>Gold Partner badge (icon) to display on your website and at events</li>
             </ul>
           </div>
         </article>
@@ -519,7 +525,8 @@
               <li>Logo listed on sponsor and donor page</li>
               <li>Recognition in seasonal campaigns</li>
               <li>Invites to select volunteer opportunities</li>
-              <li>Digital partnership badge for your website</li>
+              <li>Social media welcome announcement</li>
+              <li>Silver Partner badge (icon) to display on your website and at events</li>
             </ul>
           </div>
         </article>
@@ -731,7 +738,6 @@
               impact areas, and the right fit for your organization.
             </p>
             <p style="font-size: 0.9rem; color: #444; margin-top: 0.35rem;">
-              📧 <strong>sponsorships@livelivefoundation.org</strong><br />
               📧 Corporate Sponsorship: <strong>sponsorships@liveLIVEFoundation.org</strong>
             </p>
           </div>
