Replace logo image in footer with logo2.png

--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
   <footer>
     <div class="footer-inner">
       <div>
-        <img src="logo.png" alt="liveLIVE Foundation logo" style="width: 90px; margin-bottom: 0.5rem;" />
+        <img src="logo2.png" alt="liveLIVE Foundation logo" style="width: 90px; margin-bottom: 0.5rem;" />
       </div>
       <p>
         Partnering with liveLIVE Foundation means your organization is standing shoulder to shoulder
