Update corporate sponsorship email link in HTML

--- a/index.html
+++ b/index.html
@@ -735,7 +735,9 @@
               impact areas, and the right fit for your organization.
             </p>
             <p style="font-size: 0.9rem; color: #444; margin-top: 0.35rem;">
-              📧 Corporate Sponsorship: <strong>sponsorships@liveLIVEFoundation.org</strong>
+               <strong>📧 Corporate Sponsorship: <a href="mailto:sponsorships@liveLIVEfoundation.org" style="color:#fff; text-decoration:underline;">
+          sponsorships@liveLIVEfoundation.org
+        </a></strong>
             </p>
           </div>
         </div>
