Fix mailto link styling in sponsorship section

--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
 
       <p style="margin-top: 1rem; font-size: 0.85rem; color: rgba(255,255,255,0.85);">
         <strong>For Corporate Sponsorship opportunities, contact:
-        <a href="mailto:sponsorships@liveLIVEfoundation.org" style="color:#fff; text-decoration:underline;">
+        <a href="mailto:sponsorships@liveLIVEfoundation.org" "text-decoration:underline;">
           sponsorships@liveLIVEfoundation.org
         </a></strong>
       </p>
