Update email link color for corporate sponsorship
Change sponsorship email link text color from white to black.

--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
               impact areas, and the right fit for your organization.
             </p>
             <p style="font-size: 0.9rem; color: #444; margin-top: 0.35rem;">
-               <strong>📧 Corporate Sponsorship: <a href="mailto:sponsorships@liveLIVEfoundation.org" style="color:#fff; text-decoration:underline;">
+               <strong>📧 Corporate Sponsorship: <a href="mailto:sponsorships@liveLIVEfoundation.org" style="color:#000; text-decoration:underline;">
           sponsorships@liveLIVEfoundation.org
         </a></strong>
             </p>
