Change sponsorshipForm to hidden input field

--- a/index.html
+++ b/index.html
@@ -624,10 +624,10 @@
           <!-- Replace action with your Make.com webhook URL -->
          
 </form>
-           id="sponsorshipForm"
+           <input type="hidden" id="sponsorshipForm"
            method="POST"
            action="https://hook.make.com/r5m7u7vb40eaqmnty8gt3gqdpxe8er0v@hook.us2.make.com"
-          >
+          />
             <input type="hidden" name="source" value="CorporateSponsorshipLandingPage" />
 
             <div>
