Update form action and data-endpoint in index.html

--- a/index.html
+++ b/index.html
@@ -621,8 +621,7 @@
             employee engagement. No payment is processed on this form.
           </p>
 
-          <!-- Form posts to server-side relay at /api/submit (server forwards to Make webhook). -->
-          <form id="sponsorshipForm" method="POST" action="/api/submit">
+          <<form id="sponsorshipForm" method="POST" action="#" data-endpoint="https://hook.us2.make.com/r5m7u7vb40eaqmnty8gt3gqdpxe8er0v@hook.us2.make.com">!-- Form posts to server-side relay at /api/submit (server forwards to Make webhook). -->
             <input type="hidden" name="source" value="CorporateSponsorshipLandingPage" />
 
             <div>
